--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <p>Correo electronico: Harrisoncorreaflorez@gmail.com</p>
   <p>Skype: Harrisoncorreaflorez@hotmail.com</p>
   <p>Twitter: @HarryCorrea14</p>
-  <h2><a href=" https://harrisoncorreaflorez.github.io/Fase-2-DSW/plaining">Plaining</a></h2>
+
+  <h2>Fase 2 <a href="planing.html">Planing</a></h2>
 </body>
 
 </html>
